...
    case home = 0
    case bookshelf = 1
    case profile = 2

    var title: String {
        switch self {
        case .home: return "故事"
        case .bookshelf: return "在读"
        case .profile: return "我的"
        }
    }

    var icon: String {
...
